--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="app">
 	<head>
-		<title>Chess Wars</title>
+		<title>Westgate Sports Book SuperContest</title>
 
 		<!-- Viewport mobile tag for sensible mobile support -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<!-- meta tags for seo -->
-		<meta name="description" content="The ONLY Destination for Cash Stakes Chess!">
-		<meta name="keywords" content="chess, chess wars, chesswars, cash, stakes, cash stakes, cash chess, chess cash, gambl, chess gambl">
+		<meta name="description" content="The ONLY Destination for all the Latest from the Westgate Sports Book SuperContest 2017!">
+		<meta name="keywords" content="supercontest, super contest, westgate, westgate sports, sports book, sportsbook">
 
 		<base href="/app/"></base>
 
@@ -72,7 +72,6 @@
 <script src="/packages/moment/min/locales.min.js"></script>
 <script src="/packages/humanize-duration/humanize-duration.js"></script>
 <script src="/packages/angular-timer/dist/angular-timer.js"></script>
-<script src="/packages/angular-native-dragdrop/draganddrop.js"></script>
 <script src="/packages/bluebird/bluebird.js"></script>
 <script src="/packages/lodash/lodash.min.js"></script>
 <script src="/packages/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -80,6 +79,7 @@
 <script src="/packages/angular-bootstrap-tour/dist/angular-bootstrap-tour.min.js"></script>
 <script src="/packages/spin.js/spin.min.js"></script>
 <script src="/packages/angular-spinner/angular-spinner.min.js"></script>
+<script src="/packages/angular-native-dragdrop/draganddrop.js"></script>
 <script src="/app.js"></script>
 <script src="/local.js"></script>
 <script src="/packages/angulartics/dist/angulartics.min.js"></script>
@@ -94,6 +94,8 @@
 <script src="/services/configMgr.js"></script>
 <script src="/services/customerSchema.js"></script>
 <script src="/services/deviceMgr.js"></script>
+<script src="/services/entryMgmt.js"></script>
+<script src="/services/entrySchema.js"></script>
 <script src="/services/errMgr.js"></script>
 <script src="/services/fakeAuth.js"></script>
 <script src="/services/gameMgmt.js"></script>
@@ -102,12 +104,14 @@
 <script src="/services/layoutMgmt.js"></script>
 <script src="/services/messenger.js"></script>
 <script src="/services/navMgr.js"></script>
+<script src="/services/orderMgmt.js"></script>
 <script src="/services/payMethodMgmt.js"></script>
 <script src="/services/playerMgmt.js"></script>
 <script src="/services/playerSchema.js"></script>
 <script src="/services/pod.js"></script>
 <script src="/services/promoMgmt.js"></script>
 <script src="/services/querystring.js"></script>
+<script src="/services/selectionsMgmt.js"></script>
 <script src="/services/seo.js"></script>
 <script src="/services/signup.js"></script>
 <script src="/services/slugMgr.js"></script>
@@ -118,6 +122,8 @@
 <script src="/services/tournamentSchema.js"></script>
 <script src="/services/trdMgmt.js"></script>
 <script src="/services/wagerMgmt.js"></script>
+<script src="/services/weekMgmt.js"></script>
+<script src="/services/weekOddsMgmt.js"></script>
 <script src="/controllers/AboutController.js"></script>
 <script src="/controllers/AccountController.js"></script>
 <script src="/controllers/AccountEditController.js"></script>
@@ -127,6 +133,7 @@
 <script src="/controllers/CheckoutController.js"></script>
 <script src="/controllers/ContactController.js"></script>
 <script src="/controllers/CreateTournamentController.js"></script>
+<script src="/controllers/EntryViewController.js"></script>
 <script src="/controllers/ExplainerController.js"></script>
 <script src="/controllers/FaqController.js"></script>
 <script src="/controllers/GameController.js"></script>
